# seedcode-cli

./: .gitignore  LICENSE  README.md  llms.txt  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: publish.yml  test.yml
Info_for_ai_agents/: Architecture.md  Design.md  Documentation _ Aerolink.html  Memory.md  PRD.md  Phases.md  Rules.md
scripts/linux/: install.sh
scripts/macos/: install.sh
scripts/windows/: README.md  build.bat  build_assets.py  install.bat  setup.iss  uninstall.bat
seedcode/: __init__.py  __main__.py  app.py  cli.py
seedcode/assets/: logo.txt
seedcode/commands/: __init__.py  about.py  agent.py  clear.py  doctor.py  help.py  history.py  provider.py
seedcode/config/: __init__.py  defaults.py  manager.py
seedcode/core/: __init__.py  agent.py  chat.py  client.py  models.py  streaming.py
seedcode/core/providers/: __init__.py  aerolink.py  base.py  freemodel.py  ollama.py  openrouter.py
seedcode/memory/: __init__.py  manager.py  storage.py
seedcode/tools/: __init__.py  base.py  filesystem.py  git.py  patch.py  permissions.py  search.py  terminal.py
seedcode/ui/: __init__.py  banner.py  dashboard.py  prompts.py  renderer.py  theme.py
seedcode/utils/: __init__.py  helpers.py  logger.py
tests/: test_agent.py  test_app.py  test_build_assets.py  test_client.py  test_config.py  test_config_io.py  test_dashboard.py  test_memory.py  test_tools.py
