[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seedcode"
version = "1.2.0.3"
description = "Seed Code — a premium terminal-based AI coding assistant. Plant ideas. Grow code."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "Al shahriar sowan" }]
keywords = ["ai", "cli", "terminal", "chat", "coding-assistant", "seedcode", "ollama"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Terminals",
]
dependencies = [
    "openai>=1.40.0",
    "rich>=13.7.0",
    "prompt_toolkit>=3.0.43",
    "pydantic>=2.6.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-mock>=3.12.0"]

[project.urls]
Homepage = "https://github.com/Alshahriar-07/seedcode-cli"
Repository = "https://github.com/Alshahriar-07/seedcode-cli"

[project.scripts]
seedcode = "seedcode.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["seedcode"]

[tool.hatch.build.targets.sdist]
include = ["seedcode", "README.md", "LICENSE"]
